.upsells now align properly on desktop and mobile Fixed .pull-right problem where adding it to a .column was not forcing float: right;

--- a/assets/css/framework.css
+++ b/assets/css/framework.css
@@ -337,6 +337,7 @@ object{
     .pull-left{
         float: left;
     }
+    .column .pull-right,
     .pull-right{
         float: right;
     }
